fixed wrapping of text on index page

--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -31,6 +31,7 @@
   list-style-type: none;
   padding-left: 0;
   line-height: 25px;
+  word-wrap: break-word;
   h3 {
     color: #a12f2d;
   }
@@ -68,7 +69,7 @@ table {
 
 .table-desc {
   max-width:300px;
-  word-wrap:break-word; 
+  word-wrap:break-word;
 }
 
 .back-button {
